# edge-llm-benchmark

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench-linux-cpu.yml  bench-macos-arm.yml  publish-pages.yml
configs/: matrix-smoke.yaml  matrix.yaml
configs/profiles/: macbook-m3-36gb.yaml  rtx-4090-24gb.yaml  threadripper-128gb.yaml  windows-dev-laptop.yaml
datasets/: _ifeval_adapter.yaml  humaneval_subset.jsonl  ifeval_subset.jsonl  mmlu_subset.jsonl  wikitext-103-sample.txt
docs/: CHANGELOG.md  report-smoke.html  report.html  runbook.md
mypy_stubs/numpy/: __init__.pyi
mypy_stubs/numpy/_typing/: __init__.pyi  _array_like.pyi
scripts/: download_datasets.py  launch_6model_bench.ps1  launch_resume.ps1  pull_models.ps1  setup.ps1  setup.sh
src/edge_llm_bench/: __init__.py  aggregator.py  decision_tree.py  hardware_profiler.py  model_fetcher.py  perf_bench.py  quality_bench.py  quantizer.py  report.py  runner.py
src/edge_llm_bench/inference/: __init__.py  base.py  llamacpp_backend.py  ollama_backend.py
src/edge_llm_bench/utils/: __init__.py  logging.py  state.py
tests/: test_aggregator.py  test_decision_tree.py  test_hardware_profiler.py  test_inference_base.py  test_model_fetcher.py  test_perf_bench.py  test_quality_bench.py  test_quantizer.py  test_runner.py
